stop footer jumping on load

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,3 +23,7 @@
   color: #eee;
   padding: 0.2em 0;
 }
+
+.ng-cloak {
+  display: none;
+}
